--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,4 @@ scikit-learn==1.0.2
 streamlit==1.8.1
 imblearn==0.0
 spacy==2.2.3
-en-core-web-sm==2.2.5
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
