--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ streamlit==1.8.1
 imblearn==0.0
 spacy==2.2.3
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.0/en_core_web_sm-2.2.0.tar.gz
+seaborn==0.11.0
